Styling fixes for lists on mobile Re-added custom resolution labels

--- a/source/admin/scss/style.scss
+++ b/source/admin/scss/style.scss
@@ -429,6 +429,9 @@ body{
     .objectList{
         width:100%;
     }
+    .objectList td{
+        padding:0px 1px;
+    }
     .listitle,.formtitle{
         margin-left:5px;
     }
